scss/components: fix .tablist and organization logo z-index

--- a/adhocracy-plus/assets/scss/components/_tabs.scss
+++ b/adhocracy-plus/assets/scss/components/_tabs.scss
@@ -10,7 +10,7 @@
     border-bottom: 2px solid $brand-primary;
     text-align: center;
     margin-bottom: $spacer * 2;
-    z-index: 3;
+    z-index: 2;
 }
 
 .tab {
